--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-	"name": "obsidian-sample-plugin",
+	"name": "obsidian-binder",
 	"version": "1.0.0",
-	"description": "This is a sample plugin for Obsidian (https://obsidian.md)",
+	"description": "Bind and export Obsidian files to a professional ebook PDF for export or printing.",
 	"main": "main.js",
 	"scripts": {
 		"dev": "node esbuild.config.mjs",
@@ -12,7 +12,13 @@
 	"author": "",
 	"license": "MIT",
 	"devDependencies": {
+		"@types/js-yaml": "^4.0.9",
 		"@types/node": "^16.11.6",
+		"@types/nodepub": "^3.0.3",
+		"@types/react": "^18.3.3",
+		"@types/react-beautiful-dnd": "^13.1.8",
+		"@types/react-dom": "^18.3.0",
+		"@types/uuid": "^10.0.0",
 		"@typescript-eslint/eslint-plugin": "5.29.0",
 		"@typescript-eslint/parser": "5.29.0",
 		"builtin-modules": "3.3.0",
@@ -20,5 +26,17 @@
 		"obsidian": "latest",
 		"tslib": "2.4.0",
 		"typescript": "4.7.4"
-	}
+	},
+	"dependencies": {
+		"nodepub": "github:patrickchiang/nodepub",
+		"js-yaml": "^4.1.0",
+		"lucide-react": "^0.396.0",
+		"pagedjs": "^0.4.3",
+		"react": "^18.3.1",
+		"react-beautiful-dnd": "^13.1.1",
+		"react-dom": "^18.3.1",
+		"react-tooltip": "^5.27.0",
+		"uuid": "^10.0.0"
+	},
+	"type": "module"
 }
