--- a/package.json
+++ b/package.json
@@ -28,9 +28,12 @@
 		"typescript": "4.7.4"
 	},
 	"dependencies": {
-		"nodepub": "github:patrickchiang/nodepub",
+		"@fortawesome/fontawesome-svg-core": "^6.6.0",
+		"@fortawesome/free-brands-svg-icons": "^6.6.0",
+		"@fortawesome/free-solid-svg-icons": "^6.6.0",
 		"js-yaml": "^4.1.0",
 		"lucide-react": "^0.396.0",
+		"nodepub": "github:patrickchiang/nodepub",
 		"pagedjs": "^0.4.3",
 		"react": "^18.3.1",
 		"react-beautiful-dnd": "^13.1.1",
