Themes and preview

--- a/package.json
+++ b/package.json
@@ -31,9 +31,11 @@
 		"@fortawesome/fontawesome-svg-core": "^6.6.0",
 		"@fortawesome/free-brands-svg-icons": "^6.6.0",
 		"@fortawesome/free-solid-svg-icons": "^6.6.0",
+		"epubjs": "^0.3.93",
 		"js-yaml": "^4.1.0",
 		"lucide-react": "^0.396.0",
 		"nodepub": "github:patrickchiang/nodepub",
+		"num-words": "^1.2.3",
 		"pagedjs": "^0.4.3",
 		"react": "^18.3.1",
 		"react-beautiful-dnd": "^13.1.1",
