--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 	"author": "",
 	"license": "MIT",
 	"devDependencies": {
+		"@types/archiver": "^6.0.2",
 		"@types/js-yaml": "^4.0.9",
 		"@types/node": "^16.11.6",
 		"@types/nodepub": "^3.0.3",
@@ -31,6 +32,7 @@
 		"@fortawesome/fontawesome-svg-core": "^6.6.0",
 		"@fortawesome/free-brands-svg-icons": "^6.6.0",
 		"@fortawesome/free-solid-svg-icons": "^6.6.0",
+		"archiver": "^7.0.1",
 		"epubjs": "^0.3.93",
 		"js-yaml": "^4.1.0",
 		"lucide-react": "^0.396.0",
