--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
 		"@types/node": "^16.11.6",
 		"@types/nodepub": "^3.0.3",
 		"@types/react": "^18.3.3",
-		"@types/react-beautiful-dnd": "^13.1.8",
 		"@types/react-dom": "^18.3.0",
 		"@types/uuid": "^10.0.0",
 		"@typescript-eslint/eslint-plugin": "5.29.0",
@@ -32,6 +31,7 @@
 		"@fortawesome/fontawesome-svg-core": "^6.6.0",
 		"@fortawesome/free-brands-svg-icons": "^6.6.0",
 		"@fortawesome/free-solid-svg-icons": "^6.6.0",
+		"@hello-pangea/dnd": "^17.0.0",
 		"archiver": "^7.0.1",
 		"epubjs": "^0.3.93",
 		"js-yaml": "^4.1.0",
@@ -39,8 +39,8 @@
 		"nodepub": "github:patrickchiang/nodepub",
 		"num-words": "^1.2.3",
 		"pagedjs": "^0.4.3",
+		"prop-types": "^15.8.1",
 		"react": "^18.3.1",
-		"react-beautiful-dnd": "^13.1.1",
 		"react-dom": "^18.3.1",
 		"react-tooltip": "^5.27.0",
 		"uuid": "^10.0.0"
