--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"@types/js-yaml": "^4.0.9",
 		"@types/node": "^16.11.6",
 		"@types/nodepub": "^3.0.3",
+		"@types/pug": "^2.0.10",
 		"@types/react": "^18.3.3",
 		"@types/react-dom": "^18.3.0",
 		"@types/uuid": "^10.0.0",
@@ -40,6 +41,7 @@
 		"num-words": "^1.2.3",
 		"pagedjs": "^0.4.3",
 		"prop-types": "^15.8.1",
+		"pug": "^3.0.3",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
 		"react-tooltip": "^5.27.0",
